# Objektinis2

./: .gitignore  CMakeLists.txt  README.md  U1.txt  funkcijos.cpp  galutinis_balas.cpp  galutinis_balas_masyvai.cpp  header.h  studentai1.txt  studentas.h  timeris.h  v01.cpp  vector.h  vector.tpp  vector_test.cpp  zmogus.h
docs/html/: _r_e_a_d_m_e_8md.html  annotated.html  annotated_dup.js  class_studentas-members.html  class_studentas.html  class_studentas.js  class_studentas__coll__graph.dot  class_studentas_a0c015572b8016d34c18840647b957523_icgraph.dot  class_studentas_a148d7cfd9a24e11de95fa4ae6b055db4_icgraph.dot  class_studentas_a14efb12b554d84f818a2fc69221a8ccf_cgraph.dot  class_studentas_a220cdc8e73d872a7d267a6fd794cb94f_cgraph.dot  class_studentas_a27b489c8e9e6feedbd47e4beaa759a0a_icgraph.dot  class_studentas_a2937de900cd3bad83ffd6eb2ceae1bef_cgraph.dot  class_studentas_a2937de900cd3bad83ffd6eb2ceae1bef_icgraph.dot  class_studentas_a63e449e0f51a0b14340d02ee71b4be23_cgraph.dot  class_studentas_aab017285c3b3e7794f264e4bdb935265_icgraph.dot  class_studentas_aad81aa77f874ad0601d3a7f5b2515c66_icgraph.dot  class_studentas_ab459e995e8c9b24cdc9aec5b09a66539_icgraph.dot  class_studentas_ab9e8ffa08d3833cfa06acc2184c5875e_cgraph.dot  class_studentas_acd958ca47f9c3b9f1a7e492067430580_icgraph.dot  class_studentas_ad4857087857fa77ea0e68137d5bc9217_icgraph.dot  class_studentas_ae55a7d597d549832b805971ea4976e72_icgraph.dot  class_studentas_ae77f635127a5b6d4ef6e1f2de5ca1757_cgraph.dot  class_timer-members.html  (+96 more)
tests/: CMakeLists.txt  studentas_test.cpp  vector_test.cpp
(+127 files in other folders)
